--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "fastapi-health"
-version = "0.1.0"
+version = "0.2.0"
 description = "Heath check on FastAPI applications."
 authors = ["Marcelo Trylesinski <marcelotryle@gmail.com>"]
 readme = "README.md"
@@ -24,6 +24,7 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.6.1"
+fastapi = "^0.63.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
