➕ Add requests as dev dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ isort = "^5.0"
 pytest-cov = "^2.10.1"
 pre-commit = "^2.9.3"
 mypy = "^0.790"
+requests = "^2.25.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
