--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.6.1"
+python = ">=3.6.2,<4.0.0"
 fastapi = ">=0.63.0"
 
 [tool.poetry.dev-dependencies]
@@ -36,6 +36,7 @@ pytest-cov = "^2.10.1"
 pre-commit = "^2.9.3"
 mypy = "^0.790"
 requests = "^2.25.1"
+pytest-watcher = "^0.2.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
