--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,11 +22,14 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install Poetry
-        run: pip install poetry
+          cache: pip
       - name: Install dependencies
-        run: poetry install
+        run: |
+          python -m pip install hatch
+          python -m pip install -r requirements.txt
       - name: Run tests
-        run: poetry run pytest tests/ --cov=fastapi_health --cov-report=term-missing:skip-covered --cov-report=xml
+        run: coverage run -m pytest tests/
+      - name: Create report
+        run: coverage xml
       - name: Upload coverage
         uses: codecov/codecov-action@v1
