--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,7 @@ pytest-sugar
 pytest-asyncio
 dirty-equals
 httpx
+
+# Documentation
+git+https://${GH_TOKEN}@github.com/squidfunk/mkdocs-material-insiders.git@8.5.0-insiders-4.23.3\n
+mkdocstrings
