--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,3 +33,6 @@ jobs:
         run: coverage xml
       - name: Upload coverage
         uses: codecov/codecov-action@v1
+
+env:
+  GH_TOKEN: ${{ secrets.GH_TOKEN }}
