--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ classifiers = [
 ]
 license = "MIT"
 requires-python = ">=3.8"
-dependencies = ["fastapi>=0.85.0"]
+dependencies = ["fastapi>=0.85.0", "pydantic<=2.0"]
 optional-dependencies = {}
 
 [project.urls]
