--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,20 +1,17 @@
 repos:
-  - repo: https://github.com/myint/autoflake
-    rev: v1.4
+  - repo: local
     hooks:
-      - id: autoflake
-        args:
-          - --in-place
-          - --remove-all-unused-imports
-          - --expand-star-imports
-          - --remove-duplicate-keys
-          - --remove-unused-variables
-  - repo: https://github.com/pre-commit/mirrors-isort
-    rev: v5.4.2
+    - id: black
+      name: Black
+      entry: black
+      types: [python]
+      language: system
+  - repo: local
     hooks:
-      - id: isort
-        args: ["--profile", "black"]
-  - repo: https://github.com/psf/black
-    rev: 20.8b1
-    hooks:
-      - id: black
+    - id: ruff
+      name: Ruff
+      entry: ruff
+      types: [python]
+      language: system
+      args:
+        - "--fix"
