Add branch to coverage.run

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,6 +74,7 @@ filterwarnings = [
 
 [tool.coverage.run]
 source_pkgs = ["fastapi_health", "tests"]
+branch = true
 
 [tool.coverage.report]
 show_missing = true
