Add parallel to coverage.run

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,6 +75,7 @@ filterwarnings = [
 [tool.coverage.run]
 source_pkgs = ["fastapi_health", "tests"]
 branch = true
+parallel = true
 
 [tool.coverage.report]
 show_missing = true
