--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,8 +28,8 @@ jobs:
           python -m pip install hatch
           python -m pip install -r requirements.txt
       - name: Run tests
-        run: coverage run -m pytest tests/
+        run: hatch run test:run
       - name: Create report
-        run: coverage xml
+        run: coverage combine
       - name: Upload coverage
-        uses: codecov/codecov-action@v1
+        uses: codecov/codecov-action@v3
